Correct album image width on iphone 5 screen size

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -309,7 +309,7 @@ input {
 @media (min-width: 300px) and (max-width: 320px) {
     .row .home-images {
         height: 10vw;
-        width: 08vw;
+        width: 07vw;
     }
 
     .brand-logo {
